--- a/WeatherForecast/Resources/Info.plist
+++ b/WeatherForecast/Resources/Info.plist
@@ -6,6 +6,8 @@
 	<string>$(API_BASE_URL)</string>
 	<key>AppID</key>
 	<string>$(APP_ID)</string>
+	<key>IconBaseURL</key>
+	<string>$(ICON_BASE_URL)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -24,6 +26,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
